--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
   },
   "devDependencies": {
     "concurrently": "^7.0.0",
-    "json-server": "^0.17.0"
+    "json-server": "^0.17.0",
+    "prop-types": "^15.8.1"
   },
   "proxy": "http://localhost:5000"
 }
